@@ -1,5 +1,7 @@
 = Version 0.8.0
 
+  * [API] AMQP::Queue#unbind now takes an optional block which is fired when queue.unbind-ok response arrives.
+  * [API] AMQP::Queue#unbind now accepts :routing_key as alias to :key. we believe it is a good idea to use AMQP terms.
   * [API] AMQP::Channel#prefetch now takes (an optional) 2nd parameter that specifies
           that QoS settings should be applied to underlying connection, as well as optional callback.
   * [API] AMQP::Channel#recover now takes (an optional) callback that is fired when
